fix: Replace hardcoded colours in menu, fixed bug on collapsable where children pushed on the parent border radius

--- a/packages/component-library/components/NavigationBar/components/Menu.module.scss
+++ b/packages/component-library/components/NavigationBar/components/Menu.module.scss
@@ -57,7 +57,7 @@ $menu__square-size: $ca-grid * 2;
     right: calc(#{$menu__square-size / 2} - #{$menu__arrow-size});
     border: $menu__arrow-size solid transparent;
     border-top-width: 0;
-    border-bottom-color: #35374a; // DST-TODO: Replace this with $kz-color-wisteria-800 once kaizen-design-tokens is installed
+    border-bottom-color: $kz-color-wisteria-800;
   }
 
   [dir="rtl"] &::before {
@@ -67,9 +67,9 @@ $menu__square-size: $ca-grid * 2;
 
   > * {
     color: #fff;
-    background-color: #35374a; // DST-TODO: Replace this with $kz-color-wisteria-800 once kaizen-design-tokens is installed
+    background-color: $kz-color-wisteria-800;
     border-radius: $kz-border-solid-border-radius;
-    padding: $kz-border-solid-border-radius 0;
+    padding: 3px 0;
     white-space: nowrap;
   }
 
